fix: correct misc util bugs (URLs, paths, streams, time, throttling)
- UrlUtils: fix off-by-one in 172.16.0.0/12 private-range check;
  replace private-IP/localhost detection with InetAddress-based checks
  covering loopback/link-local/site-local/unique-local/any-local
  addresses and case-insensitive localhost matching; normalize a
  zero-padded IPv4 octet (e.g. 192.168.001.001, or one with more than 3
  digits like 00192.168.1.1 - the JDK resolver strips any number of
  leading zeros) before checking, since Guava's parser rejects
  zero-padding outright (octal-ambiguity avoidance) while the real
  resolver parses it as decimal regardless - skipping that
  normalization would let a zero-padded private/loopback address
  bypass the check entirely; correct a javadoc claim that
  '0177.0.0.1' is an octal alternate encoding of 127.0.0.1 - verified
  the JDK resolver treats it as decimal (177.0.0.1, not loopback), not
  octal; document that legacy numeric IP encodings and the deprecated
  IPv4-compatible IPv6 form are still not caught; decode userinfo
  before checking for a second colon, so a percent-encoded one can't
  bypass that check
- PathUtils: don't close the jar filesystem before Paths.get() can use
  it; handle a concurrent-creation race on first access to the same
  jar resource; fix dotfile handling in getFileExtension/
  getBaseFilename; throw a clear error for a path with no filename
- StreamUtils: fix resource leaks when GZIPInputStream construction
  fails; add a timeout to the ftp branch of copyUrlToFile; use UTF-8
  explicitly instead of the platform default charset in openReader(),
  and document the resulting strict-decoding/MalformedInputException
  behavior; add HTTP redirect/cookie handling (HostOnlyCookieStore) and
  an idle-timeout watchdog with transparent gzip Content-Encoding
  decoding; testCopyUrlToFile() no longer fetches a live
  gist.githubusercontent.com URL, matching every other test in the
  class's use of a local HttpServer; remove a